--- a/worksheet2/my-react-app/.github/workflows/ci.yml
+++ b/worksheet2/my-react-app/.github/workflows/ci.yml
@@ -1,17 +1,17 @@
 name: CI
 on:
-  pull_request:  # 当有拉取请求（PR）时触发
-    branches: [main]  # 只针对目标分支为 main 的 PR 触发
+  pull_request:
+    branches: [main]  # 当有拉取请求目标为 main 分支时触发
 jobs:
   build:
-    runs-on: ubuntu-latest  # 运行在 Ubuntu 系统的虚拟机器上
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3  # 第一步：检出仓库代码
+    - uses: actions/checkout@v3  # 检出仓库代码
     - name: Set up Node.js
-      uses: actions/setup-node@v3  # 第二步：配置 Node.js 环境
+      uses: actions/setup-node@v3
       with:
-        node-version: 16  # 指定 Node.js 版本（可根据项目调整）
+        node-version: 16  # 选择 Node.js 版本
     - name: Install dependencies
-      run: npm install  # 第三步：安装项目依赖
+      run: npm install
     - name: Run tests
-      run: npm test  # 第四步：运行测试脚本
+      run: npm test
