feat: add CI workflow for automated testing

--- a/worksheet2/my-react-app/.github/workflows/ci.yml
+++ b/worksheet2/my-react-app/.github/workflows/ci.yml
@@ -15,4 +15,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - name: Print environment variables
+      run: env
     - run: npm test
